toolbar avoids overlapping Mac's top-left controls
- add classes to body to indicate when script and scenes sidebar are
visible
- toolbar pad left 50px unless script or scenes sidebar visible
- NOTE: will apply on Windows as well (no platform-specific code)

--- a/src/css/toolbar.css
+++ b/src/css/toolbar.css
@@ -36,6 +36,13 @@
 }
 #toolbar .group_tools {
   margin-top: -10px;
+  /* to avoid Mac top-left controls (close/minimize/zoom) */
+  padding-left: 50px;
+}
+body.with-script-visible #toolbar .group_tools,
+body.with-scenes-visible #toolbar .group_tools {
+  /* if script OR scenes visible, don't bother */
+  padding-left: 0;
 }
 
 #toolbar .button { /* */ }
